--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title> welcome to Rmash.</title>
-  </head>
-  <body>
-    <div>
-            <h1><a href="/">Django Girls Blog</a></h1>
-    </div>
 
-    {% for post in posts %}
-      <div>
-        <p>published : {{ post.published_date }}</p>
-        <h1><a href="">{{ post.title }}</a></h1>
-        <p>{{ post.text|linebreaksbr }}</p>
-      </div>
+{%  extends 'blog/base.html' %}
 
-    {% endfor %}
+{% block content %}
 
-
-  </body>
-</html>
+              {% for post in posts %}
+                  <div class="post">
+                      <div class="date">
+                          <p>published: {{ post.published_date }}</p>
+                      </div>
+                      <h1><a href="{% url 'post_detail' pk=post.pk  %}">{{ post.title }}</a></h1>
+                      <p>{{ post.text|linebreaksbr }}</p>
+                  </div>
+              {% endfor %}
+{% endblock %}
