--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -17,11 +17,11 @@ h1 a {
     margin-left: 40px;
 }
 h1, h2, h3, h4 {
-    font-family: 'Lobster', cursive;
+    font-family: 'Lobster', fantasy;
 }
 .date {
     color: #828282;
-    
+
 }
 .save {
     float: right;
@@ -40,4 +40,8 @@ h1, h2, h3, h4 {
 }
 .post h1 a, .post h1 a:visited {
     color: #000000;
+}
+.comment{
+
+    margin-top: 20px 0px 20px 20px;
 }
